src/test/ui/parser/issue-14303-fn-def.stderr
error: incorrect parameter order
  --> $DIR/issue-14303-fn-def.rs:3:7
   |
LL | fn foo<'a, T, 'b>(x: &'a T) {}
   |       ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: aborting due to previous error

